--- a/app/src/main/res/layout/fragment_projects.xml
+++ b/app/src/main/res/layout/fragment_projects.xml
@@ -14,6 +14,21 @@
         android:background="@color/white"
         android:scrollbars="vertical">
 
+        <Button
+            android:id="@+id/buttonprojectback"
+            android:layout_width="80dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/aboutusback"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:text="Back"
+            android:textAllCaps="false"
+            android:textColor="#2C5FE2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/projectsHead"
             android:layout_width="wrap_content"
