--- a/app/src/main/res/layout/fragment_design_instructions.xml
+++ b/app/src/main/res/layout/fragment_design_instructions.xml
@@ -220,7 +220,7 @@
             android:background="@drawable/quiznext"
             android:fontFamily="@font/helveticaneu_bold"
             android:text="Start"
-            android:layout_marginTop="75dp"
+            android:layout_marginTop="55dp"
             android:layout_marginBottom="30dp"
             android:textAllCaps="false"
             android:textColor="#4766FF"
@@ -228,14 +228,17 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/InstructionsPoint3Des" />
+            app:layout_constraintTop_toBottomOf="@+id/InstructionsPoint4Des" />
 
         <LinearLayout
-            android:id="@+id/InstructionsPoint3Des"
+            android:id="@+id/InstructionsPoint4Des"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="25dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            app:layout_constraintTop_toBottomOf="@+id/InstructionsPoint3Des"
             tools:layout_editor_absoluteY="536dp">
 
             <View
