--- a/app/src/main/res/layout/fragment_management_instructions.xml
+++ b/app/src/main/res/layout/fragment_management_instructions.xml
@@ -117,7 +117,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="40dp"
             android:text="Instructions"
             android:textSize="24dp"
             android:textColor="@color/black"
@@ -217,7 +217,7 @@
             android:id="@+id/startButton_dm"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="75dp"
+            android:layout_marginTop="55dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/quiznext"
             android:fontFamily="@font/helveticaneu_bold"
@@ -228,15 +228,17 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/InstructionsPoint3man" />
+            app:layout_constraintTop_toBottomOf="@+id/InstructionsPoint4man" />
 
         <LinearLayout
-            android:id="@+id/InstructionsPoint3man"
+            android:id="@+id/InstructionsPoint4man"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="543dp">
+            android:layout_marginTop="25dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            app:layout_constraintTop_toBottomOf="@+id/InstructionsPoint3man">
 
             <View
                 android:layout_width="15dp"
