--- a/app/src/main/res/layout/fragment_quiz_instruction.xml
+++ b/app/src/main/res/layout/fragment_quiz_instruction.xml
@@ -220,7 +220,7 @@
             android:background="@drawable/quiznext"
             android:fontFamily="@font/helveticaneu_bold"
             android:text="Start"
-            android:layout_marginTop="95dp"
+            android:layout_marginTop="55dp"
             android:layout_marginBottom="20dp"
             android:textAllCaps="false"
             android:textColor="#4766FF"
@@ -228,15 +228,17 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/InstructionsPoint3tech" />
+            app:layout_constraintTop_toBottomOf="@+id/InstructionsPoint4tech" />
 
         <LinearLayout
-            android:id="@+id/InstructionsPoint3tech"
+            android:id="@+id/InstructionsPoint4tech"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="535dp">
+            android:layout_marginTop="25dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            app:layout_constraintTop_toBottomOf="@+id/InstructionsPoint3tech">
 
             <View
                 android:layout_width="15dp"
