--- a/app/src/main/res/layout/fragment_team.xml
+++ b/app/src/main/res/layout/fragment_team.xml
@@ -43,26 +43,39 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="0dp"
+            android:layout_height="130dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="80dp"
+            android:layout_marginRight="80dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/aboutUsHead"
+            app:srcCompat="@drawable/adglogo2" />
+
         <LinearLayout
             android:id="@+id/leads"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:padding="0dp"
-            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
             android:gravity="center_horizontal"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/aboutUsHead"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:orientation="horizontal"
+            android:padding="0dp"
             android:scrollbars="horizontal"
-            >
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/ishaanCard"
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
                 android:layout_margin="10dp"
+                android:padding="10dp"
                 app:cardBackgroundColor="@color/white"
                 app:cardCornerRadius="15dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -106,8 +119,8 @@
                         android:layout_marginEnd="15dp"
                         android:layout_marginBottom="15dp"
                         android:text="Ishaan Ohri"
-                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/ishaanName" />
 
@@ -120,8 +133,8 @@
                 android:id="@+id/ritiksCard"
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
                 android:layout_margin="10dp"
+                android:padding="10dp"
                 app:cardBackgroundColor="@color/white"
                 app:cardCornerRadius="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -146,8 +159,8 @@
                         android:id="@+id/ritiksName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
                         android:layout_marginStart="15dp"
+                        android:layout_marginTop="8dp"
                         android:layout_marginEnd="15dp"
                         android:fontFamily="@font/robotomedium"
                         android:text="iOS Lead"
@@ -161,11 +174,11 @@
                         android:id="@+id/ritiksDesig"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
                         android:layout_marginStart="15dp"
+                        android:layout_marginTop="5dp"
                         android:layout_marginEnd="15dp"
-                        android:text="Ritik Suryawanshi"
                         android:layout_marginBottom="15dp"
+                        android:text="Ritik Suryawanshi"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
