--- a/app/src/main/res/layout/fragment_team.xml
+++ b/app/src/main/res/layout/fragment_team.xml
@@ -361,7 +361,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/navya" />
+                        app:srcCompat="@drawable/subh" />
 
                     <TextView
                         android:id="@+id/navyaName"
@@ -371,7 +371,7 @@
                         android:layout_marginStart="15dp"
                         android:layout_marginEnd="15dp"
                         android:fontFamily="@font/robotomedium"
-                        android:text="Technical Advisor"
+                        android:text="R \u0026 D Head"
                         android:textColor="@color/black"
                         android:textSize="16dp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -386,7 +386,8 @@
                         android:layout_marginStart="15dp"
                         android:layout_marginEnd="15dp"
                         android:layout_marginBottom="15dp"
-                        android:text="Navya Saxena"
+                        android:text="Shubhankar\nShankar"
+                        android:textAlignment="center"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -420,7 +421,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/mihir" />
+                        app:srcCompat="@drawable/navya" />
 
                     <TextView
                         android:id="@+id/mihirName"
@@ -445,7 +446,7 @@
                         android:layout_marginStart="15dp"
                         android:layout_marginEnd="15dp"
                         android:layout_marginBottom="15dp"
-                        android:text="Mihir Khare"
+                        android:text="Navya Saxena"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -493,7 +494,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/subh" />
+                        app:srcCompat="@drawable/mihir" />
 
                     <TextView
                         android:id="@+id/shubhankarName"
@@ -503,7 +504,7 @@
                         android:layout_marginStart="15dp"
                         android:layout_marginEnd="15dp"
                         android:fontFamily="@font/robotomedium"
-                        android:text="R \u0026 D Head"
+                        android:text="Technical Advisor"
                         android:textColor="@color/black"
                         android:textSize="16dp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -517,7 +518,7 @@
                         android:layout_marginTop="5dp"
                         android:layout_marginStart="15dp"
                         android:layout_marginEnd="15dp"
-                        android:text="Shubhankar\nShankar"
+                        android:text="Mihir Khare"
                         android:textAlignment="center"
                         android:layout_marginBottom="15dp"
                         app:layout_constraintBottom_toBottomOf="parent"
