--- a/app/src/main/res/layout/fragment_faq_fragment.xml
+++ b/app/src/main/res/layout/fragment_faq_fragment.xml
@@ -16,15 +16,14 @@
             android:id="@+id/faqHead"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="F.A.Q"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="15dp"
             android:fontFamily="@font/helveticaneu_bold"
+            android:text="F.A.Q.s"
             android:textColor="#000000"
             android:textSize="40dp"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/faqCategories"
